--- a/Makefile.vc
+++ b/Makefile.vc
@@ -29,8 +29,8 @@ ENVIR_ILIB=
 #all: check-env components
 all: components
 
-#components: libs progs install-local samples
-components: libs progs install-local 
+#components: libs progs samples
+components: libs progs
 
 
 #=====================================================================
@@ -134,8 +134,10 @@ demo:
 clean:
 	-for %%i in ( $(LIBS) $(PROGS) ) do \
 	    cd $(OMNETPP_SRC_DIR:/=\)\%%i && $(MAKE) $(MOPTS) $(MAKEFILE) clean
-#	-for %%i in ( $(SAMPLES) ) do \
-#	    cd $(OMNETPP_SAMPLES_DIR:/=\)\%%i && $(MAKE) $(MOPTS) $(MAKEFILE) clean
+	-del /q $(OMNETPP_BIN_DIR:/=\)\*.*
+	-del /q $(OMNETPP_LIB_DIR:/=\)\*.*
+	-for %%i in ( $(SAMPLES) ) do \
+	    cd $(OMNETPP_SAMPLES_DIR:/=\)\%%i && del *.obj *.exe
 
 depend:
 	for %%i in ( $(LIBS) $(PROGS) ) do \
@@ -143,7 +145,4 @@ depend:
 #	for %%i in ( $(SAMPLES) ) do \
 #	    cd $(OMNETPP_SAMPLES_DIR:/=\)\%%i && $(MAKE) $(MOPTS) $(MAKEFILE) depend
 
-install-local:
-	for %%i in ( $(LIBS) $(PROGS) ) do \
-	    cd $(OMNETPP_SRC_DIR:/=\)\%%i && $(MAKE) $(MOPTS) $(MAKEFILE) install-local
 
