--- a/src/plove-old/Makefile.in
+++ b/src/plove-old/Makefile.in
@@ -3,11 +3,11 @@
 #
 OMNETPP_BIN_DIR=@OMNETPP_BIN_DIR@
 
+all: plove
+	(dir=`pwd`; cd $(OMNETPP_BIN_DIR); rm -f plove; ln -s $$dir/plove .)
+
 depend:
 
 clean:
-
-install-local: plove
-	(dir=`pwd`; cd $(OMNETPP_BIN_DIR); rm -f plove; ln -s $$dir/plove .)
 
 # DO NOT DELETE THIS LINE -- make depend depends on it.
