--- a/Makefile.in
+++ b/Makefile.in
@@ -7,6 +7,8 @@
 #
 # Directories
 #
+OMNETPP_BIN_DIR =       @OMNETPP_BIN_DIR@
+OMNETPP_LIB_DIR =       @OMNETPP_LIB_DIR@
 OMNETPP_SRC_DIR =       @OMNETPP_SRC_DIR@
 OMNETPP_SAMPLES_DIR =   @OMNETPP_SAMPLES_DIR@
 
@@ -134,8 +136,8 @@ clean:
 	for i in $(LIBS) $(PROGS); do \
 	    (cd $(OMNETPP_SRC_DIR)/$$i && $(MAKE) clean); \
 	done
-	rm -f $(OMNETPP_BIN_DIR)/*
-	rm -f $(OMNETPP_LIB_DIR)/*
+	- rm $(OMNETPP_BIN_DIR)/*
+	- rm $(OMNETPP_LIB_DIR)/*
 	for i in $(SAMPLES); do \
 	    (cd $(OMNETPP_SAMPLES_DIR)/$$i && $(MAKE) clean); \
 	done
