--- a/src/cmdenv/Makefile.in
+++ b/src/cmdenv/Makefile.in
@@ -57,11 +57,10 @@ clean:
 
 # DO NOT DELETE THIS LINE -- make depend depends on it.
 
-cmdenv.o: cmdenv.h ../sim/ctypes.h ../sim/chead.h ../sim/cobject.h
-cmdenv.o: ../sim/defs.h ../sim/util.h ../sim/csimul.h ../sim/errmsg.h
+cmdenv.o: cmddefs.h ../sim/defs.h cmdenv.h ../sim/ctypes.h ../sim/chead.h
+cmdenv.o: ../sim/cobject.h ../sim/util.h ../sim/csimul.h ../sim/errmsg.h
 cmdenv.o: ../sim/cmsgheap.h ../sim/coutvect.h ../sim/ccor.h
-cmdenv.o: ../envir/omnetapp.h ../sim/carray.h ../sim/cenvir.h
+cmdenv.o: ../envir/omnetapp.h ../sim/carray.h ../sim/cenvir.h ../envir/args.h
 cmdenv.o: ../envir/envdefs.h enumstr.h ../envir/appreg.h ../envir/cinifile.h
 cmdenv.o: ../sim/cmodule.h ../sim/cqueue.h ../sim/cgate.h ../sim/cnetmod.h
-cmdenv.o: ../envir/args.h
 enumstr.o: enumstr.h
