--- a/src/envir/Makefile.vc
+++ b/src/envir/Makefile.vc
@@ -3,13 +3,15 @@
 #
 !include ..\..\configuser.vc
 
+!if "$(LIB_SUFFIX)"==".lib"
+CFLAGS=$(CFLAGS) /DSTATIC_LIBRARY
+!endif
+
 #
 # Local definitions
 #
-COPTS=$(CFLAGS) /I "$(OMNETPP_INCL_DIR)" /DBUILDING_ENVIR /DHAVE_DLOPEN=$(HAVE_DLOPEN) 
-
-OBJS=args.obj cenvir.obj cinifile.obj main.obj omnetapp.obj slaveapp.obj seeds.obj patmatch.obj
-
+COPTS=$(CFLAGS) /I "$(OMNETPP_INCL_DIR)" /DBUILDING_ENVIR /DHAVE_DLOPEN=$(HAVE_DLOPEN)
+OBJS=args.obj cenvir.obj cinifile.obj main.obj omnetapp.obj slaveapp.obj seeds.obj patmatch.obj platdep.obj
 LIBS=$(OMNETPP_SRC_DIR)/sim/sim_std.ilib
 
 #
@@ -54,6 +56,9 @@ seeds.obj : seeds.cc
 
 patmatch.obj : patmatch.cc
 	$(CXX) $(COPTS) /c /Tp patmatch.cc
+
+platdep.obj : platdep.cc
+	$(CXX) $(COPTS) /c /Tp platdep.cc
 
 depend:
 	@ echo *** make depend not (yet) supported with MSVC
