--- a/src/nedc/Makefile.vc
+++ b/src/nedc/Makefile.vc
@@ -53,7 +53,10 @@ depend:
 	@ echo *** make depend not (yet) supported with MSVC
 
 clean:
-	del *.obj lex.yy.c ebnf.tab.c ebnf.tab.h nedc.exe *_n.cc
+	del *.obj nedc.exe *_n.cc *.ilk *.pdb 2> nul
+
+realclean: clean
+	del lex.yy.c ebnf.tab.c ebnf.tab.h 2> nul
 
 # DO NOT DELETE THIS LINE -- make depend depends on it.
 
