--- a/src/envir/Makefile.vc
+++ b/src/envir/Makefile.vc
@@ -64,7 +64,7 @@ depend:
 	@ echo *** make depend not (yet) supported with MSVC
 
 clean:
-	del *.obj envir.lib envir.dll envir.ilib envir.exp
+	del *.obj envir.lib envir.dll envir.ilib envir.exp 2> nul
 
 # DO NOT DELETE THIS LINE -- make depend depends on it.
 
