--- a/src/sim/Makefile.vc
+++ b/src/sim/Makefile.vc
@@ -147,8 +147,8 @@ depend:
 	@ echo *** make depend not (yet) supported with MSVC
 
 clean:
-	del *.obj sim_std.lib sim_std.dll sim_std.ilib sim_std.exp
-	del       sim_pvm.lib sim_pvm.dll sim_pvm.ilib sim_pvm.exp
+	del sim_std.lib sim_std.dll sim_std.ilib sim_std.exp *.obj 2> nul
+	del sim_pvm.lib sim_pvm.dll sim_pvm.ilib sim_pvm.exp 2> nul
 
 # DO NOT DELETE THIS LINE -- make depend depends on it.
 
