--- a/src/utils/Makefile.vc
+++ b/src/utils/Makefile.vc
@@ -21,7 +21,7 @@ replace.exe: replace.c
 depend:
 	@ echo *** make depend not (yet) supported with MSVC
 clean:
-	del *.obj seedtool.exe tcl2c.exe 2> nul
+	del *.obj seedtool.exe tcl2c.exe replace.exe 2> nul
 
 # DO NOT DELETE THIS LINE -- make depend depends on it.
 
