*** empty log message ***

--- a/samples/token/omnetpp.ini
+++ b/samples/token/omnetpp.ini
@@ -23,6 +23,7 @@ slowexec-delay = 300ms
 update-freq-fast = 10
 update-freq-express = 1000
 breakpoints-enabled = yes
+extra-stack=20000 ;20K, but 10K is probably enough
 
 [DisplayStrings]
 Computer.sink = "i=sink"
