*** empty log message ***

--- a/samples/nim/omnetpp.ini
+++ b/samples/nim/omnetpp.ini
@@ -15,6 +15,6 @@ default-run=1
 *.game = "b=60,60,oval"
 
 [Parameters]
-nim.player1_type = "SmartPlayer"
+nim.player1_type = "InteractivePlayer"
 nim.player2_type = "SmartPlayer"
 ;nim.player2_type = "SimplePlayer"
